# ihalent

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
docs/: schema.md
examples/: README.md  build_sample.py  istanbul-yapim-2025.json  make_demo_svg.py  sample-awards.jsonl
examples/notices/: 2025-2174700.md  2025-2198370.md  2025-2337797.md  2025-2388267.md
src/ihalent/: __init__.py  analytics.py  cli.py  ingest.py  mcp_server.py  model.py  normalize.py  parse.py  render.py  store.py
tests/: conftest.py  test_analytics.py  test_ingest.py  test_mcp_tools.py  test_normalize.py  test_parse.py  test_store_cli.py
